--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta name="viewport" content="width=device-width">
     <meta name="viewport" content="height=device-height">
-    <meta name="viewport" content="user-scalable=no">
+    <meta name="viewport" content="user-scalable=yes">
     <link
       href="https://fonts.googleapis.com/css2?family=Bruno+Ace&display=swap"
       rel="stylesheet"
